--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import './header.scss';
 @import './vite-promo.scss';
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  line-height: 1.14;
   font-weight: 400;
 
   color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #fffefe;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
