--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,22 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="container">
+    <div class="header-container">
+      <a class="header-logo" href="#">
+        <img
+          src="./img/header/logo.png"
+          srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
+          alt=""
+        />
+      </a>
+      <button class="header-menu-button" id="menu-button">
+        <img
+          class="header-menu-image"
+          src="{=$icon-path}"
+          width="48"
+          height="48"
+          alt="Menu button image"
+        />
+      </button>
+    </div>
+  </div>
 </header>
