--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -3,26 +3,11 @@
 /*
 screen types: 
     mobile,
-    to-tablet
-    tablet,
-    to-desktop
     desktop,
 */
 @mixin media($_screen) {
   @if $_screen == mobile {
     @media screen and (min-width: $mobile) {
-      @content;
-    }
-  } @else if $_screen == to-tablet {
-    @media screen and (max-width: $to-tablet) {
-      @content;
-    }
-  } @else if $_screen == tablet {
-    @media screen and (min-width: $tablet) {
-      @content;
-    }
-  } @else if $_screen == to-desktop {
-    @media screen and (max-width: $to-desktop) {
       @content;
     }
   } @else if $_screen == desktop {
@@ -38,4 +23,10 @@ screen types:
   $result: math.div($_lnh, $_fsz);
 
   line-height: math.div(math.round($result * 100), 100);
+}
+
+@mixin poppins($weight) {
+  font-family: 'Poppins', sans-serif;
+  font-weight: $weight;
+  font-style: normal;
 }
