add symbols and id

--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -1,4 +1,4 @@
-<section class="developers">
+<section class="developers" id="developers">
   <div class="container">
     <h2>Developer’s Insights</h2>
     <p>
