--- a/src/partials/game.html
+++ b/src/partials/game.html
@@ -1,4 +1,4 @@
-<section class="game">
+<section class="game" id="game">
   <div class="container">
     <h2>Day in the Game</h2>
     <p>What’s a typical day like in <span>Juicy Crush?</span></p>
