--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,21 +1,17 @@
-<header class="header">
+<header class="header" id="header">
   <div class="container">
     <div class="header-container">
-      <a class="header-logo" href="#">
+      <a class="header-logo" href="#" title="logo">
         <img
           src="./img/header/logo.png"
           srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
           alt=""
         />
       </a>
-      <button class="header-menu-button" id="menu-button">
-        <img
-          class="header-menu-image"
-          src="{=$icon-path}"
-          width="48"
-          height="48"
-          alt="Menu button image"
-        />
+      <button class="header-menu-button" id="menu-button" title="menu button">
+        <svg class="icon" width="48" height="48">
+          <use href="./img/symbols.svg#icon-burger"></use>
+        </svg>
       </button>
     </div>
   </div>
