--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,4 +1,4 @@
-<section class="home">
+<section class="home" id="home">
   <div class="container">
     <h1><span>Juicy Crush</span> – Match, Smash & Squeeze the Fun!</h1>
     <p>Experience the most refreshing match-3 puzzle game ever created!</p>
