--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -9,25 +9,21 @@
           alt=""
         />
       </a>
-      <button class="header-menu-button" id="menu-close">
-        <img
-          class="header-menu-image"
-          src="{=$icon-x-path}"
-          width="48"
-          height="48"
-          alt="Menu button image"
-        />
+      <button class="header-menu-button" id="menu-close" title="close menu">
+        <svg class="icon" width="48" height="48">
+          <use href="./img/symbols.svg#icon-icon-x"></use>
+        </svg>
       </button>
     </div>
     <ul id="mobile-menu-links">
       <li><a href="#overview">Game Overview</a></li>
-      <li><a href="#">Features</a></li>
-      <li><a href="#">How to Play</a></li>
-      <li><a href="#">Day in the Game</a></li>
-      <li><a href="#">The Art of Sound</a></li>
-      <li><a href="#">Developer’s Insights</a></li>
-      <li><a href="#">Speedrun Challenges</a></li>
-      <li><a href="#">Easter Eggs & Hidden Secrets</a></li>
+      <li><a href="#features">Features</a></li>
+      <li><a href="#play">How to Play</a></li>
+      <li><a href="#game">Day in the Game</a></li>
+      <li><a href="#sounds">The Art of Sound</a></li>
+      <li><a href="#developers">Developer’s Insights</a></li>
+      <li><a href="#speedrun">Speedrun Challenges</a></li>
+      <li><a href="#secrets">Easter Eggs & Hidden Secrets</a></li>
     </ul>
   </div>
 </div>
