--- a/src/partials/secrets.html
+++ b/src/partials/secrets.html
@@ -1,4 +1,4 @@
-<section class="secrets">
+<section class="secrets" id="secrets">
   <div class="container">
     <h2>Easter Eggs & Hidden Secrets</h2>
     <p>
