--- a/src/partials/speedrun.html
+++ b/src/partials/speedrun.html
@@ -1,4 +1,4 @@
-<section class="speedrun">
+<section class="speedrun" id="speedrun">
   <div class="container">
     <h2>Speedrun Challenges</h2>
     <p>
