--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,6 +11,7 @@
 @import './speedrun.scss';
 @import './secrets.scss';
 @import './footer.scss';
+@import './cookies.scss';
 
 :root {
   @include poppins(400);
