--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,5 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="container">
-    <!-- <h1>Footer</h1> -->
     <img src="" alt="logo" />
     <h2>Juicy Crush</h2>
     <ul>
