--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
       </a>
       <button class="header-menu-button" id="menu-button" title="menu button">
         <svg class="icon" width="48" height="48">
-          <use href="./img/symbols.svg#icon-burger"></use>
+          <use href="./img/sprite.svg#icon-burger"></use>
         </svg>
       </button>
     </div>
