--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -11,7 +11,7 @@
       </a>
       <button class="header-menu-button" id="menu-close" title="close menu">
         <svg class="icon" width="48" height="48">
-          <use href="./img/symbols.svg#icon-icon-x"></use>
+          <use href="./img/sprite.svg#icon-icon-x"></use>
         </svg>
       </button>
     </div>
