--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import './container.scss';
 @import './header.scss';
 @import './menu.scss';
 @import './home.scss';
