add footer links

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,9 +3,9 @@
     <img src="" alt="logo" />
     <h2>Juicy Crush</h2>
     <ul>
-      <li><a href="">Privacy Policy</a></li>
-      <li><a href="">Terms and Conditions</a></li>
-      <li><a href="">Cookies Policy</a></li>
+      <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+      <li><a href="./terms-and-conditions.html">Terms and Conditions</a></li>
+      <li><a href="./cookies-policy.html">Cookies Policy</a></li>
     </ul>
     <p>© 2025 Juicy Crush. All rights reserved juicycrush.site</p>
   </div>
