--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,6 +8,18 @@
           alt=""
         />
       </a>
+      <nav class="header_nav">
+        <ul class="header_menu">
+          <li><a href="#overview">Game Overview</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#play">How to Play</a></li>
+          <li><a href="#game">Day in the Game</a></li>
+          <li><a href="#sounds">The Art of Sound</a></li>
+          <li><a href="#developers">Developer’s Insights</a></li>
+          <li><a href="#speedrun">Speedrun Challenges</a></li>
+          <li><a href="#secrets">Easter Eggs & Hidden Secrets</a></li>
+        </ul>
+      </nav>
       <button class="header-menu-button" id="menu-button" title="menu button">
         <svg class="icon" width="48" height="48">
           <use href="./img/sprite.svg#icon-burger"></use>
