--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -15,7 +15,7 @@
         </svg>
       </button>
     </div>
-    <ul id="mobile-menu-links">
+    <ul class="mobile-menu-list" id="mobile-menu-links">
       <li><a href="#overview">Game Overview</a></li>
       <li><a href="#features">Features</a></li>
       <li><a href="#play">How to Play</a></li>
