--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -4,3 +4,46 @@
 
 .icon {
 }
+
+// vk
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 28px;
+  margin-bottom: 27px;
+}
+.header-logo {
+  margin-right: 21px;
+}
+
+.header_nav {
+  width: 922px;
+  margin: 0 auto;
+}
+
+.header_menu {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 12px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.header_menu li a {
+  display: block;
+  text-decoration: none;
+  color: #000000;
+}
+
+@media (min-width: 320px) and (max-width: 1199px) {
+  .header_nav {
+    display: none;
+  }
+}
+@media (min-width: 1200px) {
+  .header-menu-button {
+    display: none;
+  }
+}
