--- a/src/scss/cookies.scss
+++ b/src/scss/cookies.scss
@@ -1,3 +1,80 @@
 .cookies {
-  background-color: #fcd5ce;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 344px;
+  background-color: #fff;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-align: center;
+
+  h2 {
+    @include poppins(600);
+    @include font(24, 36);
+    @include gradient-text();
+    margin-bottom: 16px;
+  }
+
+  p {
+    @include font(14, 21);
+    margin-bottom: 16px;
+  }
+
+  .cookies-accept {
+    @include gradient-button();
+    width: 280px;
+    height: 56px;
+    margin-bottom: 16px;
+    display: block;
+  }
+
+  .cookies-decline {
+    border-radius: 12px;
+    border: 1px solid transparent;
+    background: $_gradient_decline padding-box, $_gradient_button border-box;
+    width: 280px;
+    height: 56px;
+    @include poppins(400);
+    @include font(16, 23);
+    display: block;
+
+    span {
+      @include gradient-text();
+    }
+  }
+
+  @media (min-width: 1200px) {
+    height: 300px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    h2 {
+      @include font(36, 54);
+      margin-bottom: 24px;
+    }
+
+    p {
+      @include font(18, 27);
+      padding-left: 86px;
+      padding-right: 86px;
+      margin-bottom: 32px;
+    }
+
+    .cookies-accept,
+    .cookies-decline {
+      width: 201px;
+      height: 56px;
+      margin: 0;
+    }
+
+    .cookies-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+  }
+
+  &.closed {
+    display: none;
+  }
 }
