save isAccepted cookies to localstorage

--- a/src/partials/cookies.html
+++ b/src/partials/cookies.html
@@ -1,4 +1,4 @@
-<div class="cookies" id="cookies">
+<div class="cookies closed" id="cookies">
   <div class="container">
     <h2>Cookies Policy</h2>
     <p>
