add img styles Home

--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,7 +1,48 @@
 <section class="home" id="home">
   <div class="container">
-    <h1><span>Juicy Crush</span> – Match, Smash & Squeeze the Fun!</h1>
-    <p>Experience the most refreshing match-3 puzzle game ever created!</p>
-    <button>GET IT ON Google Play</button>
+    <div class="home-container">
+      <div class="home-content">
+        <h1 class="home-h1">
+          <span class="text-accent">Juicy Crush</span> – Match, Smash & Squeeze
+          the Fun!
+        </h1>
+        <p class="home-p">
+          Experience the most refreshing match-3 puzzle game ever created!
+        </p>
+        <!-- <button class="home-cta">
+          <img src="./img/home/i.png" alt="" /><span class="home-cta-p"
+            >GET IT ON Google Play</span
+          >
+        </button> -->
+        <a
+          class="home-cta"
+          target="_blank"
+          href="https://play.google.com/store/apps/details?id=com.LMKS.JUICYCRUSH&hl=en&gl=us"
+        >
+          <img
+            class="google-button-img"
+            alt="google play"
+            src="./img/home/i.png"
+            width="24"
+            height="24"
+          />
+          <span class="home-cta-p">GET IT ON Google Play</span>
+        </a>
+      </div>
+      <div class="image-container">
+        <img
+          src="./img/home/home_desc1.png"
+          srcset="./img/home/home_desc1.png 1x, ./img/home/home_desc1_x2.png 2x"
+          alt="Image 1"
+          class="image image-1"
+        />
+        <img
+          src="./img/home/home_desc2.png"
+          srcset="./img/home/home_desc2.png 1x, ./img/home/home_desc2_x2.png 2x"
+          alt="Image 2"
+          class="image image-2"
+        />
+      </div>
+    </div>
   </div>
 </section>
