--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -3,12 +3,27 @@
     <h2>Features</h2>
     <ul>
       <li>
-        <img src="" alt="bomb" />
+        <img
+          src="./img/features/bomb@2x.png"
+          alt="bomb"
+          srcset="./img/features/bomb.png 1x, ./img/features/bomb@2x.png 2x"
+          width="64"
+          height="64"
+        />
         <h3>Fruit-Blasting Gameplay</h3>
         <p>Match fruits and watch them explode in a splash of color!</p>
       </li>
       <li>
-        <img src="" alt="lightning" />
+        <img
+          src="./img/features/lightning@2x.png"
+          alt="lightning"
+          srcset="
+            ./img/features/lightning.png    1x,
+            ./img/features/lightning@2x.png 2x
+          "
+          width="64"
+          height="64"
+        />
         <h3>Powerful Boosters</h3>
         <p>
           Unlock special fruit combos and crushing hammers to clear tricky
@@ -16,17 +31,38 @@
         </p>
       </li>
       <li>
-        <img src="" alt="book" />
+        <img
+          src="./img/features/book@2x.png"
+          alt="book"
+          srcset="./img/features/book.png 1x, ./img/features/book@2x.png 2x"
+          width="64"
+          height="64"
+        />
         <h3>Engaging Story Mode</h3>
         <p>Progress through hundreds of levels with exciting challenges.</p>
       </li>
       <li>
-        <img src="" alt="star" />
+        <img
+          src="./img/features/star@2x.png"
+          alt="star"
+          srcset="./img/features/star.png 1x, ./img/features/star@2x.png 2x"
+          width="64"
+          height="64"
+        />
         <h3>Daily & Weekly Events</h3>
         <p>Compete in limited-time puzzles and earn sweet rewards.</p>
       </li>
       <li>
-        <img src="" alt="wifi off" />
+        <img
+          src="./img/features/offline@2x.png"
+          alt="offline"
+          srcset="
+            ./img/features/offline.png    1x,
+            ./img/features/offline@2x.png 2x
+          "
+          width="64"
+          height="64"
+        />
         <h3>Offline Play</h3>
         <p>Enjoy Juicy Crush anywhere, anytime—no internet required!</p>
       </li>
