--- a/src/partials/overview.html
+++ b/src/partials/overview.html
@@ -1,12 +1,51 @@
 <section class="overview" id="overview">
   <div class="container">
-    <h2>Game Overview</h2>
-    <h3>Welcome to Juicy Crush, the most refreshing match-3 puzzle game!</h3>
-    <p>
+    <h2 class="over_h2">Game Overview</h2>
+    <h3 class="over_h3">
+      Welcome to <span class="over-text-accent">Juicy Crush</span>, the most
+      refreshing match-3 puzzle game!
+    </h3>
+    <p class="over_p">
       Dive into a world filled with vibrant fruits, exciting combos, and
       explosive juice splashes. Solve puzzles, collect rewards, and master juicy
       challenges in this addictively fun adventure!
     </p>
-    <img src="" width="280" height="193" alt="game image" />
+    <div class="overview-bg">
+      <!-- <img src="" width="280" height="193" alt="game image" /> -->
+      <picture>
+        <!-- from 1200px -->
+        <source
+          srcset="
+            ./img/overview/bg_over.jpg    1x,
+            ./img/overview/bg_over_x2.jpg 2x
+          "
+          media="(min-width: 1200px)"
+        />
+
+        <!-- mob to 1199px -->
+        <source
+          srcset="
+            ./img/overview/bg_over_m.jpg    1x,
+            ./img/overview/bg_over_m_x2.jpg 2x
+          "
+          media="(max-width: 1199px)"
+        />
+
+        <!-- fallback -->
+        <img
+          src="./img/overview/bg_over_m.jpg"
+          alt="Overview image"
+          loading="lazy"
+        />
+      </picture>
+      <img
+          src="./img/overview/over_img.png"
+          srcset="./img/overview/over_img.png 1x, ./img/overview/over_img_x2.png 2x"
+          alt="Image 3"
+          class="image_over image-ow"
+        />
+        
+      </div>
+    </div>
   </div>
 </section>
