--- a/src/scss/overview.scss
+++ b/src/scss/overview.scss
@@ -1,3 +1,107 @@
 .overview {
   background-color: #fff5ba;
 }
+
+.over_h2 {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 125%;
+  text-align: center;
+  color: var(--linel-1);
+}
+.over_h3 {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--linel-1);
+}
+.over-text-accent {
+  font-weight: 700;
+  background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.over_p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187%;
+  text-align: center;
+  color: #4b5563;
+}
+
+@media (min-width: 1200px) {
+  .over_h2 {
+    margin-top: 80px;
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    color: var(--linel-1);
+  }
+  .over_h3 {
+    margin-top: 12px;
+    margin-bottom: 24px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 32px;
+    text-align: center;
+    color: var(--linel-1);
+  }
+  .over-text-accent {
+    font-weight: 700;
+    background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.overview-bg {
+  position: relative;
+  margin-top: 24px;
+  margin-bottom: 40px;
+}
+
+.image-ow {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  // width: 140px;
+  width: 99px;
+  height: auto;
+  z-index: 2;
+}
+
+@media (min-width: 1200px) {
+  .imageow {
+    width: 280px;
+  }
+}
+.image-ow {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translate(40%, 20%);
+  width: 140px;
+  height: auto;
+  z-index: 2;
+}
+
+@media (min-width: 1200px) {
+  .overview-bg {
+    margin-top: 40px;
+    margin-bottom: 98px;
+  }
+  .image-ow {
+    width: 280px;
+    transform: translateX(50%, 10%);
+  }
+}
