complete section how to play

--- a/src/scss/common/_vars.scss
+++ b/src/scss/common/_vars.scss
@@ -13,3 +13,5 @@ $_gradient_button_clicked: linear-gradient(
 );
 $_gradient_decline: linear-gradient(90deg, #fff7ed 0%, #fdf2f8 100%);
 $_decline_clicked: linear-gradient(90deg, #efefef 0%, #efefef 100%);
+
+$_light_bg_color: #fffefe;
