--- a/src/partials/sounds.html
+++ b/src/partials/sounds.html
@@ -1,10 +1,38 @@
 <section class="sounds" id="sounds">
-  <div class="container">
-    <h2>The Art of Sound</h2>
-    <p>
+  <div class="container sound">
+    <h2 class="sound_h2">The Art of Sound</h2>
+    <p class="sound_p">
       Every sound in <span>Juicy Crush</span> is designed to enhance immersion—
       from the crisp crunch of fruits to the explosion of boosters!
     </p>
-    <button>Listen to Game Sounds</button>
+    <button class="sound_cta">
+      <svg
+        width="12"
+        height="17"
+        viewBox="0 0 12 17"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path d="M0 0.5H12V16.5H0V0.5Z" stroke="#E5E7EB" />
+        <path
+          d="M2.28125 1.7186C1.81875 1.43422 1.2375 1.42485 0.765625 1.69047C0.29375 1.9561 0 2.4561 0 2.99985V13.9998C0 14.5436 0.29375 15.0436 0.765625 15.3092C1.2375 15.5748 1.81875 15.5623 2.28125 15.2811L11.2812 9.7811C11.7281 9.50922 12 9.02485 12 8.49985C12 7.97485 11.7281 7.4936 11.2812 7.2186L2.28125 1.7186Z"
+          fill="url(#paint0_linear_44_176)"
+        />
+        <defs>
+          <linearGradient
+            id="paint0_linear_44_176"
+            x1="0"
+            y1="8.49928"
+            x2="12"
+            y2="8.49928"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#F97316" />
+            <stop offset="1" stop-color="#EC4899" />
+          </linearGradient>
+        </defs>
+      </svg>
+      Listen to Game Sounds
+    </button>
   </div>
 </section>
