--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -1,3 +1,182 @@
 .game {
   background-color: #d0f0c0;
 }
+
+// vk
+.container {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.game_h2 {
+  font-weight: 700;
+  font-size: 24px;
+  text-align: center;
+  color: #000;
+  margin-bottom: 8px;
+}
+.game_h_p {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+  color: #000;
+  margin-bottom: 36px;
+}
+.game_acc_text {
+  font-weight: 700;
+  background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.game_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.game_li {
+  display: flex;
+  flex-direction: column;
+}
+
+.game_li_h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1;
+  text-align: right;
+  color: #000;
+  text-align: right;
+  margin-bottom: 16px;
+}
+
+.game_li_p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1;
+  text-align: right;
+  color: #4b5563;
+  text-align: right;
+  margin-bottom: 44px;
+}
+
+.bonus-list img {
+  width: 38px;
+  height: auto;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    padding-top: 80px;
+    padding-bottom: 96px;
+  }
+  .game_content {
+    // display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .bonus-list img {
+    width: 48px;
+    margin-left: 100px;
+  }
+}
+
+.game_div {
+  border: 0px solid #e5e7eb;
+  width: 4px;
+  height: 394px;
+  background: #fed7aa;
+}
+
+@media (min-width: 320px) and (max-width: 1199px) {
+  .game_div {
+    display: none;
+  }
+}
+
+// gallery
+.game_gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+.game_gallery__item img {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+}
+
+@media (min-width: 1200px) {
+  // .game_gallery {
+  //   display: grid;
+  //   grid-template-columns: repeat(2, 1fr);
+  //   grid-template-rows: auto auto;
+  //   gap: 20px;
+  //   position: relative;
+  // }
+
+  .game_gallery__item:nth-child(1) {
+    grid-column: 1 / 2;
+    grid-row: 1;
+  }
+
+  .game_gallery__item:nth-child(2) {
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+
+  .game_gallery__item--center {
+    grid-column: 1 / 3;
+    grid-row: 2;
+    justify-self: center;
+    margin-top: -5%;
+    z-index: 1;
+  }
+
+  .game_gallery__item img {
+    max-width: 400px;
+  }
+  .game_gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto;
+    gap: 20px;
+    position: relative;
+    // align-items: start;
+  }
+
+  .game_gallery li:nth-child(3) {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: center;
+    margin-top: -15%;
+    z-index: 2;
+  }
+}
+
+@media (min-width: 1200px) {
+  .game_h2 {
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    color: #000;
+  }
+  .game_h_p {
+    font-weight: 500;
+    font-size: 32px;
+    text-align: center;
+    color: #000;
+  }
+  .game_content {
+    margin-right: 94px;
+  }
+  .bonus-list {
+    width: 382px;
+  }
+  .game_gallery {
+    width: 382px;
+  }
+}
