--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,8 @@
         <img
           src="./img/header/logo.png"
           srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
-          alt=""
+          alt="Logo"
+          class="header-img"
         />
       </a>
       <nav class="header_nav">
