--- a/src/partials/game.html
+++ b/src/partials/game.html
@@ -1,5 +1,5 @@
 <section class="game" id="game">
-  <div class="container">
+  <div class="container game-container">
     <h2 class="game_h2">Day in the Game</h2>
     <p class="game_h_p">
       What’s a typical day like in
