--- a/src/partials/overview.html
+++ b/src/partials/overview.html
@@ -1,5 +1,5 @@
 <section class="overview" id="overview">
-  <div class="container">
+  <div class="container overview-container">
     <h2 class="over_h2">Game Overview</h2>
     <h3 class="over_h3">
       Welcome to <span class="over-text-accent">Juicy Crush</span>, the most
@@ -39,13 +39,14 @@
         />
       </picture>
       <img
-          src="./img/overview/over_img.png"
-          srcset="./img/overview/over_img.png 1x, ./img/overview/over_img_x2.png 2x"
-          alt="Image 3"
-          class="image_over image-ow"
-        />
-        
-      </div>
+        src="./img/overview/over_img.png"
+        srcset="
+          ./img/overview/over_img.png    1x,
+          ./img/overview/over_img_x2.png 2x
+        "
+        alt="Image 3"
+        class="image_over image-ow"
+      />
     </div>
   </div>
 </section>
