--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -3,7 +3,7 @@
 }
 
 // vk
-.container {
+.game-container {
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -66,7 +66,7 @@
 }
 
 @media (min-width: 1200px) {
-  .container {
+  .game-container {
     padding-top: 80px;
     padding-bottom: 96px;
   }
