--- a/src/scss/overview.scss
+++ b/src/scss/overview.scss
@@ -38,7 +38,7 @@
 }
 
 @media (min-width: 1200px) {
-  .container {
+  .overview-container {
     padding-top: 80px;
     padding-bottom: 98px;
   }
