--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,29 +1,31 @@
 <!-- Mobile Menu -->
-<div id="menu" class="mobile-menu">
-  <div class="container">
+<div id="menu" class="mobile-menu closed">
+  <div class="mobile-menu-container">
     <div class="mobile-menu-header">
-      <a class="header-logo" href="#">
+      <a href="#">
         <img
           src="./img/header/logo.png"
           srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
           alt=""
         />
       </a>
-      <button class="header-menu-button" id="menu-close" title="close menu">
+      <button id="menu-close" title="close menu" class="menu-close-button">
         <svg class="icon" width="48" height="48">
           <use href="./img/sprite.svg#icon-icon-x"></use>
         </svg>
       </button>
     </div>
-    <ul class="mobile-menu-list" id="mobile-menu-links">
-      <li><a href="#overview">Game Overview</a></li>
-      <li><a href="#features">Features</a></li>
-      <li><a href="#play">How to Play</a></li>
-      <li><a href="#game">Day in the Game</a></li>
-      <li><a href="#sounds">The Art of Sound</a></li>
-      <li><a href="#developers">Developer’s Insights</a></li>
-      <li><a href="#speedrun">Speedrun Challenges</a></li>
-      <li><a href="#secrets">Easter Eggs & Hidden Secrets</a></li>
-    </ul>
+    <nav>
+      <ul id="mobile-menu-links" class="mobile-menu-list">
+        <li><a href="#overview">Game Overview</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#play">How to Play</a></li>
+        <li><a href="#game">Day in the Game</a></li>
+        <li><a href="#sounds">The Art of Sound</a></li>
+        <li><a href="#developers">Developer’s Insights</a></li>
+        <li><a href="#speedrun">Speedrun Challenges</a></li>
+        <li><a href="#secrets">Easter Eggs & Hidden Secrets</a></li>
+      </ul>
+    </nav>
   </div>
 </div>
