--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,19 +1,69 @@
-.mobile-menu {
-  background-color: #aec6cf;
-  width: 320px;
-  height: 538px;
-  margin: auto;
+.mobile-menu-container {
+  width: $mobile;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  // height: 100%;
 }
+
+.mobile-menu {
+  background-image: $_gradient_decline;
+  width: 100%;
+  // height: 100%;
+  // min-height: 538px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+}
+
 .mobile-menu-header {
   display: flex;
   justify-content: space-between;
+  padding: 11px 16px 0 20px;
+  margin-bottom: 40px;
+}
+
+.menu-close-button {
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  margin: 0;
+  display: block;
+  border: none;
+  background-color: transparent;
 }
 
 .mobile-menu-list {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-top: 40px;
+  width: 235px;
+  height: 360px;
+  // margin-top: 40px;
   align-items: center;
-  width: 320px;
+  // width: 320px;
+
+  li {
+    @include poppins(400);
+    @include font(16, 24);
+  }
+}
+
+@media (min-width: 1200px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu-container nav {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  // align-items: center;
+}
+
+.closed {
+  display: none;
 }
