fix overview section

--- a/src/partials/overview.html
+++ b/src/partials/overview.html
@@ -38,15 +38,12 @@
           loading="lazy"
         />
       </picture>
-      <img
-        src="./img/overview/over_img.png"
-        srcset="
-          ./img/overview/over_img.png    1x,
-          ./img/overview/over_img_x2.png 2x
-        "
-        alt="Image 3"
-        class="image_over image-ow"
-      />
     </div>
+    <img
+      src="./img/overview/over_img.png"
+      srcset="./img/overview/over_img.png 1x, ./img/overview/over_img_x2.png 2x"
+      alt="Image 3"
+      class="image_over image-ow"
+    />
   </div>
 </section>
