--- a/src/scss/overview.scss
+++ b/src/scss/overview.scss
@@ -1,5 +1,10 @@
 .overview {
-  background-color: #fff5ba;
+  background-image: $_gradient_decline;
+  padding-top: 40px;
+}
+
+.overview-container {
+  position: relative;
 }
 
 .over_h2 {
@@ -10,6 +15,7 @@
   text-align: center;
   color: var(--linel-1);
 }
+
 .over_h3 {
   margin-top: 8px;
   margin-bottom: 16px;
@@ -20,6 +26,7 @@
   text-align: center;
   color: var(--linel-1);
 }
+
 .over-text-accent {
   font-weight: 700;
   background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
@@ -35,6 +42,7 @@
   line-height: 187%;
   text-align: center;
   color: #4b5563;
+  margin-bottom: 16px;
 }
 
 @media (min-width: 1200px) {
@@ -42,6 +50,7 @@
     padding-top: 80px;
     padding-bottom: 98px;
   }
+
   .over_h2 {
     font-family: var(--font-family);
     font-weight: 700;
@@ -49,6 +58,7 @@
     text-align: center;
     color: var(--linel-1);
   }
+
   .over_h3 {
     margin-top: 12px;
     margin-bottom: 24px;
@@ -58,6 +68,7 @@
     text-align: center;
     color: var(--linel-1);
   }
+
   .over-text-accent {
     font-weight: 700;
     background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
@@ -69,7 +80,6 @@
 
 .overview-bg {
   position: relative;
-  padding-top: 24px;
   padding-bottom: 40px;
 }
 
@@ -77,9 +87,8 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  // width: 140px;
-  width: 99px;
-  height: auto;
+  width: 100px;
+  height: 106px;
   z-index: 2;
 }
 
@@ -87,24 +96,24 @@
   .imageow {
     width: 280px;
   }
-}
-.image-ow {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  transform: translate(40%, 20%);
-  width: 140px;
-  height: auto;
-  z-index: 2;
-}
 
-@media (min-width: 1200px) {
+  .image-ow {
+    width: 291px;
+    height: 332px;
+    bottom: 80px;
+    right: 20px;
+  }
+
+  .overview {
+    padding-top: 0;
+  }
+
   .overview-bg {
     margin-top: 40px;
-    // margin-bottom: 98px;
+    padding-bottom: 0;
   }
-  .image-ow {
-    width: 280px;
-    transform: translateX(50%, 10%);
+
+  .over_p {
+    margin-bottom: 0;
   }
 }
