--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -1,11 +1,22 @@
 <section class="developers" id="developers">
-  <div class="container">
-    <h2>Developer’s Insights</h2>
-    <p>
-      How did <span>Juicy Crush</span> come to life? Our developers were
-      inspired by the joy of fruit markets, vibrant summer colors, and the
-      thrill of solving puzzles. Learn about the creative process, hidden game
-      mechanics, and what’s next for the game!
-    </p>
+  <div class="container dev">
+    <div class="devs">
+      <h2 class="devs_h">Developer’s Insights</h2>
+      <p class="devs_p">
+        How did <span class="devs_accent">Juicy Crush</span> come to life? Our
+        developers were inspired by the joy of fruit markets, vibrant summer
+        colors, and the thrill of solving puzzles. Learn about the creative
+        process, hidden game mechanics, and what’s next for the game!
+      </p>
+    </div>
+    <div class="dev_img">
+      <img
+        src="./img/developers/devs.png"
+        srcset="./img/developers/devs.png 1x, ./img/developers/devs_x2.png 2x"
+        alt="Developers"
+        class="dev-img"
+        loading="lazy"
+      />
+    </div>
   </div>
 </section>
