--- a/src/partials/sounds.html
+++ b/src/partials/sounds.html
@@ -5,7 +5,7 @@
       Every sound in <span>Juicy Crush</span> is designed to enhance immersion—
       from the crisp crunch of fruits to the explosion of boosters!
     </p>
-    <button class="sound_cta">
+    <!-- <button class="sound_cta">
       <svg
         width="12"
         height="17"
@@ -33,6 +33,13 @@
         </defs>
       </svg>
       Listen to Game Sounds
-    </button>
+    </button> -->
+    <a
+      class="sound-cta"
+      target="_blank"
+      href="https://play.google.com/store/apps/details?id=com.LMKS.JUICYCRUSH&hl=en&gl=us"
+    >
+      <span class="sound-cta-p">Listen to Game Sounds</span>
+    </a>
   </div>
 </section>
