fix home section

--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -26,7 +26,7 @@
             width="24"
             height="24"
           />
-          <span class="home-cta-p">GET IT ON Google Play</span>
+          <p class="home-cta-p">GET IT ON <span>Google Play</span></p>
         </a>
       </div>
       <div class="image-container">
