--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,24 @@
 <footer class="footer" id="footer">
   <div class="container">
-    <img src="" alt="logo" />
-    <h2>Juicy Crush</h2>
-    <ul>
-      <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-      <li><a href="./terms-and-conditions.html">Terms and Conditions</a></li>
-      <li><a href="./cookies-policy.html">Cookies Policy</a></li>
-    </ul>
-    <p>© 2025 Juicy Crush. All rights reserved juicycrush.site</p>
+    <div class="footer-nav">
+      <a class="footer-logo" href="#" title="logo">
+        <img
+          src="./img/header/logo.png"
+          srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
+          alt="Logo"
+          class="header-img"
+        />
+        <span>Juicy Crush</span>
+      </a>
+      <ul class="footer-list">
+        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+        <li><a href="./terms-and-conditions.html">Terms and Conditions</a></li>
+        <li><a href="./cookies-policy.html">Cookies Policy</a></li>
+      </ul>
+    </div>
+
+    <p class="footer-copy">
+      © 2025 Juicy Crush. All rights reserved juicycrush.site
+    </p>
   </div>
 </footer>
