--- a/src/partials/speedrun.html
+++ b/src/partials/speedrun.html
@@ -1,23 +1,24 @@
 <section class="speedrun" id="speedrun">
-  <div class="container">
-    <h2>Speedrun Challenges</h2>
-    <p>
-      Think you're fast? <span>Juicy Crush</span> features time-limited speedrun
-      levels where players race against the clock to complete objectives. Only
-      the quickest and sharpest puzzle solvers will claim the top spots!
+  <div class="container speedrun_content">
+    <h2 class="speed_h">Speedrun Challenges</h2>
+    <p class="speed_h_p">
+      Think you're fast? <span class="speed_accent">Juicy Crush</span> features
+      time-limited speedrun levels where players race against the clock to
+      complete objectives. Only the quickest and sharpest puzzle solvers will
+      claim the top spots!
     </p>
-    <ul>
+    <ul class="speed_ul">
       <li>
-        <p>01:23</p>
-        <p>Best Time</p>
+        <p class="speed_li_h speed1">01:23</p>
+        <p class="speed_li_p">Best Time</p>
       </li>
       <li>
-        <p># 1</p>
-        <p>Global Rank</p>
+        <p class="speed_li_h speed2"># 1</p>
+        <p class="speed_li_p">Global Rank</p>
       </li>
       <li>
-        <p>1,234</p>
-        <p>Attempts</p>
+        <p class="speed_li_h speed3">1,234</p>
+        <p class="speed_li_p">Attempts</p>
       </li>
     </ul>
   </div>
