--- a/src/scss/speedrun.scss
+++ b/src/scss/speedrun.scss
@@ -1,3 +1,110 @@
 .speedrun {
-  background-color: #b2fefa;
+  // background-color: #b2fefa;
+  background-color: #fffefe;
+}
+
+.speedrun_content {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.speed_h {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 208%;
+  text-align: center;
+  color: var(--linel-1);
+}
+
+.speed_h_p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187%;
+  text-align: center;
+  color: #4b5563;
+}
+
+.speed_accent {
+  font-weight: 700;
+  background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.speed_ul {
+  display: flex;
+  flex-direction: column;
+  gap: 135px;
+  border-radius: 12px;
+  padding: 55px 62px;
+  width: 281px;
+  height: 673px;
+  box-shadow: 0 20px 25px 0 rgba(0, 0, 0, 0.1), 0 8px 10px 0 rgba(0, 0, 0, 0.1);
+  background: #fff;
+}
+
+.speed_li_h {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 60px;
+  text-align: center;
+}
+
+.speed1 {
+  color: #f97316;
+}
+
+.speed2 {
+  color: #ec4899;
+}
+
+.speed3 {
+  color: #8b5cf6;
+}
+
+.speed_li_p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  text-align: center;
+  color: #4b5563;
+}
+
+@media (min-width: 1200px) {
+  .speedrun_content {
+    padding-top: 80px;
+    padding-bottom: 76px;
+  }
+  .speed_h {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    color: var(--linel-1);
+  }
+  .speed_h_p {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 150%;
+    text-align: center;
+    color: #4b5563;
+    // width: 836px;
+    margin-top: 24px;
+    margin-bottom: 40px;
+  }
+  .speed_ul {
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 12px;
+    width: 1008px;
+    height: 212px;
+    box-shadow: 0 20px 25px 0 rgba(0, 0, 0, 0.1),
+      0 8px 10px 0 rgba(0, 0, 0, 0.1);
+    background: #fff;
+  }
 }
