--- a/src/scss/secrets.scss
+++ b/src/scss/secrets.scss
@@ -1,3 +1,82 @@
 .secrets {
-  background-color: #ffe5b4;
+  // background-color: #ffe5b4;
+  background: linear-gradient(90deg, #fff7ed 0%, #fdf2f8 100%);
+}
+
+.secret {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.secret_h {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 146%;
+  text-align: center;
+  color: var(--linel-1);
+}
+
+.secret_p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187%;
+  text-align: center;
+  color: #4b5563;
+  padding-top: 8px;
+  padding-bottom: 16px;
+}
+
+.secret_accent {
+  font-weight: 700;
+  background: linear-gradient(90deg, #f97316 0%, #ec4899 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.secret-cta-p {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #fff;
+}
+
+.home-cta:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(249, 115, 22, 0.7) 0%,
+    rgba(236, 72, 153, 0.7) 100%
+  );
+}
+
+@media (min-width: 1200px) {
+  .secret {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .secret_h {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    color: var(--linel-1);
+  }
+  .secret_p {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 150%;
+    text-align: center;
+    color: #4b5563;
+    padding-top: 24px;
+    padding-bottom: 28px;
+    width: 908px;
+  }
+  .home-cta {
+    margin: auto;
+    width: 201px;
+  }
 }
