--- a/src/partials/secrets.html
+++ b/src/partials/secrets.html
@@ -1,11 +1,19 @@
 <section class="secrets" id="secrets">
-  <div class="container">
-    <h2>Easter Eggs & Hidden Secrets</h2>
-    <p>
-      Did you know Juicy Crush has secret fruit combos that trigger unique
-      animations? Discover rare matches, hidden bonus levels, and even a few
-      developer inside jokes scattered throughout the game!
+  <div class="container secret">
+    <h2 class="secret_h">Easter Eggs & Hidden Secrets</h2>
+    <p class="secret_p">
+      Did you know <span class="secret_accent">Juicy Crush</span> has secret
+      fruit combos that trigger unique animations? Discover rare matches, hidden
+      bonus levels, and even a few developer inside jokes scattered throughout
+      the game!
     </p>
-    <button>Start Discovering</button>
+    <!-- <button>Start Discovering</button> -->
+    <a
+      class="home-cta"
+      target="_blank"
+      href="https://play.google.com/store/apps/details?id=com.LMKS.JUICYCRUSH&hl=en&gl=us"
+    >
+      <p class="secret-cta-p">Start Discovering</p>
+    </a>
   </div>
 </section>
