--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,7 @@
 @import './secrets.scss';
 @import './footer.scss';
 @import './cookies.scss';
+@import './privacy-p.scss';
 
 :root {
   @include poppins(400);
