complete cookies policy

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,6 +14,7 @@
 @import './footer.scss';
 @import './cookies.scss';
 @import './privacy-p.scss';
+@import './cookies-p.scss';
 
 :root {
   @include poppins(400);
