--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer" id="footer">
   <div class="container">
     <div class="footer-nav">
-      <a class="footer-logo" href="#" title="logo">
+      <a class="footer-logo" href="./" title="logo">
         <img
           src="./img/header/logo.png"
           srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
