header logo link

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="container">
     <div class="header-container">
-      <a class="header-logo" href="#" title="logo">
+      <a class="header-logo" href="./" title="logo">
         <img
           src="./img/header/logo.png"
           srcset="./img/header/logo.png 1x, ./img/header/logo@2x.png 2x"
