--- a/src/partials/secrets.html
+++ b/src/partials/secrets.html
@@ -9,7 +9,7 @@
     </p>
     <!-- <button>Start Discovering</button> -->
     <a
-      class="home-cta"
+      class="home-cta secret-home-cta"
       target="_blank"
       href="https://play.google.com/store/apps/details?id=com.LMKS.JUICYCRUSH&hl=en&gl=us"
     >
