--- a/src/scss/secrets.scss
+++ b/src/scss/secrets.scss
@@ -75,7 +75,13 @@
     padding-bottom: 28px;
     width: 908px;
   }
-  .home-cta {
+
+  // .home-cta {
+  //   margin: auto;
+  //   width: 201px;
+  // }
+
+  .secret-home-cta {
     margin: auto;
     width: 201px;
   }
